# RelGauge_cleaned

./: DEPENDENCY_TRACE.md  LICENSE  MANIFEST.json  README.md  RUNTIMES.md  analyze_tstar.py  cloud_basepoint_search.py  cloud_search.py  cloud_wilson_scaling.py  compare_cycles.py  compression_ratio_flow.py  decisive_conjugation_test.py  extract_tstar.py  merge_basepoint_results.py  pyproject.toml  rebuild_charts_test.py  reproduce.sh  reproduce_quick.sh  requirements-lock.txt  requirements.txt  test_imports.sh  verify_base_charts.py  verify_conjugation.py
data/: reference_support.json  repro_witness_search_minimal.csv  repro_witness_search_q2_v9_fullperm_cap32_transition_iter8_random_full_permutation_full_atlas_cap32_inst28_seed3221741.npy
paper/: siq_paper_journal_ready.tex
relgauge/: __init__.py  basepointawareholonomyaudit.py  binarycompositegaugespectrumaudit.py  boundaryproliferationaudit.py  criticalc2birthwindowaudit.py  dynamicsconsistencyfixedpointaudit.py  exactclosureholonomyaudit.py  fiberatlasfixedpointaudit.py  fiberchartconnectionaudit.py  generatedcandidatephysicsreplayaudit.py  iteratedfiberatlasdynamicsaudit.py  iterationattractoraudit.py  multiobserverconsensusaudit.py  observationmethodscaletest.py  perturbationstabilityaudit.py  predictivequotientchartaudit.py  supportfluxmemoryaudit.py  temporalcapacitychartbasisaudit.py
results/: basepoint_isotropy_v9_target.csv  basepoint_isotropy_v9_target_loops.csv  basepoint_isotropy_v9_target_summary.json  synthetic_smoke.csv  synthetic_smoke_charts.csv  synthetic_smoke_loops.csv  (+3 more)
tests/: test_data.py  (+3 more)
