[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "siq-framework"
version = "0.5.0"
description = "Finite-atlas self-observation experiments for structural S3 gauge-consensus events"
requires-python = ">=3.9"
dependencies = ["numpy==2.3.5", "pandas==2.2.3", "matplotlib==3.10.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["relgauge*"]
